...
    <string name="clear_local_storage">Clear local storage</string>
    <string name="clear_local_storage_success">Cleared local storage!</string>

    <!-- Task view and its buttons -->
    <string name="task_title_hint">Name</string>
    <string name="task_description_hint">Description</string>
    <string name="add_subtask">Add subtask</string>
    <string name="task_completion_title">Congratulations!</string>
    <string name="task_completion_desc">You just completed a task. Keep it up!</string>
    <string name="subtask_completion_desc">You just completed a task. Keep it up!</string>
    <string name="tap_to_modify">Tap to modify</string>
    <string name="add_remove_assignee">Add/remove assignee</string>
    <string name="assignees_button">Assignees</string>

    <!-- Calendar view and its buttons -->
    <string name="cycle_calendar_views" translatable="false">↻</string>
    <string name="no_events">No events on this day.</string>
    <string name="refresh_calendar_fail">Could not refresh.</string>
    <string name="calendar_upcoming_date">On the %1$s.</string>
...
    <string name="confirm">Confirm</string>

    <!-- Login -->
    <string name="tag_login_activity" translatable="false">LoginActivity</string>
    <string name="tag_register_email" translatable="false">RegisterEmail</string>
    <string name="tag_login_email" translatable="false">LoginEmail</string>
    <string name="email_already_used">Email is already used.</string>
    <string name="verify_email">Please verify your email and then reload the app.\n\n</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_constraints">- Must be at least 8 characters.\n- Must contain at least 1 lowercase and 1 uppercase letter.\n- Must contain at least 1 number.\n- Must contain at least 1 special character.\n- Cannot contain any whitespaces.\n- Both passwords must be the same.</string>
    <string name="reg_email_auth_failed">Authentication failed.</string>
    <string name="log_email_auth_failed">Email or password is wrong.</string>
    <string name="email_not_valid">Email is not valid.</string>
    <string name="password_not_valid">Password is not valid.</string>
    <string name="inputs_empty">Inputs must not be empty.</string>
    <string name="signout_intent">sign_out</string>

    <!-- Attachment menu -->
    <string name="attach">Attach</string>
    <string name="show">Show</string>
    <string name="remove">Remove</string>
...
