...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="229dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_imageButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintHeight_max="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_height="wrap_content"
        android:onClick="rotateLists"
        android:text="@string/cycle_calendar_views"
        app:layout_constraintBottom_toTopOf="@id/task_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toEndOf="@id/new_task"
        app:layout_constraintTop_toBottomOf="@id/calendar"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/new_task"
        android:layout_width="48dp"
...
